--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
     <artifactId>jsave</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies></dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
