--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>jsave</groupId>
     <artifactId>jsave</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
@@ -19,20 +19,18 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
-<<<<<<< HEAD
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
             <version>1.3</version>
             <scope>test</scope>
-=======
-            <type>jar</type>
->>>>>>> master
         </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+    <name>JSave</name>
+    <description>JSave is a library to read save format from IDL</description>
 </project>
